# AplikacjaKliencka_CLAAH01

./: .gitignore  baza_danych.db  dane.db  klienci.csv  odczyty.csv  pomiary.csv  pyproject.toml  runner_mobile.py
collection/: collect.py
main_db/: buduj.py  czysc.py  importuj.py  odczyty.csv  testy.ipynb  wprowadz.py  wynik.py
